# Cratch

./: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  compiler-guard.yml  desktop-release.yml  web-release.yml
apps/desktop/: package.json  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
apps/web/: index.html  package.json  playwright.visual.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/.storybook/: preview.ts
apps/web/scripts/: check-style-tokens.mjs
apps/web/src/: App.tsx  ErrorBoundary.tsx  components.tsx  editor.ts  main.tsx  project-io.ts  styles.css  tokens.css
apps/web/src/compiler/: blocks.ts  extensions.ts  index.integration.test.ts  index.ts  migrations.test.ts  migrations.ts  sample.ts  types.ts
apps/web/src/compiler/__fixtures__/: compiler-fixtures.ts
apps/web/src/stories/: Button.stories.tsx  StatePanel.stories.tsx
apps/web/visual-tests/: storybook.visual.spec.ts
crates/compiler-core/: Cargo.toml
crates/compiler-core/src/: ast.rs  cgen.rs  extensions.rs  lib.rs  semantics.rs  types.rs
crates/compiler-core/tests/: fixture_matrix.rs
crates/compiler-core/tests/fixtures/invalid/call_arity/: expected.diagnostic  project.json
crates/compiler-wasm/: Cargo.toml
crates/compiler-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  COMPILER_PASSES.md  CONTRIBUTING.md  EXTENSIONS.md  accessibility-checklist.md  design-debt-backlog.md  design-system.md  visual-regression.md
(+14 files in other folders)
