[package]
name = "scratchlowlevel-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
compiler-core = { path = "../../../crates/compiler-core" }

[build-dependencies]
tauri-build = "2"
